--- a/Testing.html
+++ b/Testing.html
@@ -78,7 +78,7 @@
 
       <!-- Lottie animation container (top) -->
       <!-- <div id="lottie-top-animation" class="position-absolute"></div> -->
-<img id="bg-image-replacement2" src="assets/img/home-3/bgred.png" alt="redbg">
+<img id="bg-image-replacement2" src="assets/img/home-3/bgred.avif" alt="redbg">
 
     
  <!-- Overlay paragraph -->
