--- a/company.html
+++ b/company.html
@@ -393,7 +393,7 @@
                 <div class="header-left">
                     <div class="logo initial-large">
                         <a href="home.html" class="header-logo">
-                            <img src="assets/img/logo/black-logo.png" alt="The Entity Studios Logo">
+                            <img src="assets/img/logo/black-logo.avif" alt="The Entity Studios Logo">
                         </a>
                     </div>
                     <div class="mean__menu-wrapper">
@@ -508,7 +508,7 @@
   <div id="smooth-content">
     <div class="hero-section hero-1 responsive-hero">
       <video autoplay muted loop playsinline aria-hidden="true">
-        <source src="assets/img/home-1/hero/Logo_AI.mp4" type="video/mp4">
+        <source src="assets/img/home-1/hero/Logo_AI.webm" type="video/mp4">
         <!-- No need for fallback inside <video> tag; background image already handles it -->
       </video>
     </div>
@@ -564,12 +564,12 @@
     <!-- Main Heading -->
     <!-- Decorative Shape -->
     <div class="right-shape position-absolute bottom-0 end-0 z-n1 d-none d-md-block">
-        <img src="assets/img/home-2/match/left-shape - TES.png" alt="img">
+        <img src="assets/img/home-2/match/left-shape - TES.avif" alt="img">
     </div>
 
     <!-- Decorative Shape -->
     <div class="left-shape position-absolute bottom-0 start-0 z-n1 d-none d-md-block">
-        <img src="assets/img/home-2/match/left-shape.png" alt="img">
+        <img src="assets/img/home-2/match/left-shape.avif" alt="img">
     </div>
 
     <!-- Content Container -->
@@ -752,7 +752,7 @@
 
     <!-- Decorative Shape -->
     <div class="left-shape position-absolute bottom-0 start-0 z-n1 d-none d-md-block">
-        <img src="assets/img/home-1/about/shape-1.png" alt="img">
+        <img src="assets/img/home-1/about/shape-1.avif" alt="img">
     </div>
 
     <!-- Content Container -->
@@ -848,7 +848,7 @@
         
         <!-- ISO -->
         <div class="d-flex align-items-center gap-3 text-start" style="min-width: 220px;">
-          <img src="assets/img/inner-page/team-details/iso.png" alt="ISO/IEC 27001 certified badge" class="img-fluid" style="max-height: 50px;">
+          <img src="assets/img/inner-page/team-details/iso.avif" alt="ISO/IEC 27001 certified badge" class="img-fluid" style="max-height: 50px;">
           <div>
             <h6 class="mb-0 fw-semibold">
               ISO/IEC 27001
@@ -863,7 +863,7 @@
 
         <!-- TPN -->
         <div class="d-flex align-items-center gap-3 text-start" style="min-width: 220px;">
-          <img src="assets/img/inner-page/team-details/tpn.png" alt="TPN certification badge" class="img-fluid" style="max-height: 50px;">
+          <img src="assets/img/inner-page/team-details/tpn.avif" alt="TPN certification badge" class="img-fluid" style="max-height: 50px;">
           <div>
             <h6 class="mb-0 fw-semibold">
               TPN
@@ -916,13 +916,13 @@
                     <div class="swiper-slide brand-slide-element">
                         <div class="marquee-text-3">
                             <span class="text-marquee">The Entity Studios</span>
-                            <span><img src="assets/img/home-1/circle.png" alt="img"></span>
+                            <span><img src="assets/img/home-1/circle.avif" alt="img"></span>
                         </div>
                     </div>
                     <div class="swiper-slide brand-slide-element">
                         <div class="marquee-text-3">
                             <span class="text-marquee">The Entity Studios</span>
-                            <span><img src="assets/img/home-1/circle.png" alt="img"></span>
+                            <span><img src="assets/img/home-1/circle.avif" alt="img"></span>
                         </div>
                     </div>
                     
@@ -935,13 +935,13 @@
                         <div class="swiper-slide brand-slide-element">
                             <div class="marquee-text-3">
                                 <span class="text-marquee">AAA VETERANS</span>
-                                <span><img src="assets/img/home-1/circle.png" alt="img"></span>
+                                <span><img src="assets/img/home-1/circle.avif" alt="img"></span>
                             </div>
                         </div>
                         <div class="swiper-slide brand-slide-element">
                             <div class="marquee-text-3">
                                 <span class="text-marquee">ELITE GAME ANIMATION</span>
-                                <span><img src="assets/img/home-1/circle.png" alt="img"></span>
+                                <span><img src="assets/img/home-1/circle.avif" alt="img"></span>
                             </div>
                         </div>
                     </div>
@@ -1041,12 +1041,12 @@
     </div>
 
     <!-- Left Rotated Image -->
-    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image hide-on-small">
-    <img src="assets/img/hammerlight.png" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
+    <img src="assets/img/hammer.avif" alt="Left Image" class="side-image left-image hide-on-small">
+    <img src="assets/img/hammerlight.avif" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
 
     <!-- Right Image -->
-    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image hide-on-small">
-    <img src="assets/img/home-1/testimonial/shapel.png" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
+    <img src="assets/img/home-1/testimonial/shape.avif" alt="Right Image" class="side-image right-image hide-on-small">
+    <img src="assets/img/home-1/testimonial/shapel.avif" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
 
   </div>
 </section>
@@ -1484,22 +1484,22 @@
         <div class="logo-carousel-wrapper">
             <div class="logo-track" id="logoTrack2">
           <!-- Initial Logos -->
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).png" alt="Logo 1"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).png" alt="Logo 2"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).png" alt="Logo 3"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (4).png" alt="Logo 4"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (5).png" alt="Logo 5"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (6).png" alt="Logo 6"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (7).png" alt="Logo 7"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (8).png" alt="Logo 8"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (9).png" alt="Logo 9"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).png" alt="Logo 10"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).png" alt="Logo 11"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).png" alt="Logo 12"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).png" alt="Logo 13"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).png" alt="Logo 14"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).png" alt="Logo 15"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).png" alt="Logo 16"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).avif" alt="Logo 1"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).avif" alt="Logo 2"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).avif" alt="Logo 3"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (4).avif" alt="Logo 4"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (5).avif" alt="Logo 5"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (6).avif" alt="Logo 6"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (7).avif" alt="Logo 7"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (8).avif" alt="Logo 8"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (9).avif" alt="Logo 9"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).avif" alt="Logo 10"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).avif" alt="Logo 11"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).avif" alt="Logo 12"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).avif" alt="Logo 13"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).avif" alt="Logo 14"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).avif" alt="Logo 15"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).avif" alt="Logo 16"></div>
 
 
             </div>
@@ -1511,7 +1511,7 @@
 <div class="col-lg-8 col-md-8">
     <div class="d-flex justify-content-center justify-content-md-start align-items-center mb-3">
         <a href="home.html" class="header-logo">
-            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
         </a>
     </div>
     <p class="footer-description py-3">
