--- a/home.html
+++ b/home.html
@@ -399,7 +399,7 @@
                 <div class="header-left">
                     <div class="logo initial-large">
                         <a href="home.html" class="header-logo">
-                            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+                            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
                         </a>
                     </div>
                     <div class="mean__menu-wrapper">
@@ -485,7 +485,7 @@
   <div class="container">
   <!-- 🔹 Background Video (desktop only) -->
   <video class="hero-bg-video" autoplay muted loop playsinline poster="assets/img/home-1/hero/hero-bg.avif">
-    <source src="assets/img/home-1/hero/Heroloop.mp4" type="video/mp4">
+    <source src="assets/img/home-1/hero/Heroloop.webm" type="video/mp4">
     <!-- Fallback text if video can't be played -->
     Your browser does not support the video tag.
   </video>
@@ -495,7 +495,7 @@
       <div class="col-lg-4 col-md-6 mb-4 mb-md-0 d-flex justify-content-center justify-content-lg-start">
         <div class="hero-image wow animated-image text-center w-100">
           <img loading="lazy" src="assets/img/home-1/hero/hammer.avif" alt="overlay" class="overlay-img img-fluid" style="max-width: 100%; height: auto;">
-          <img loading="lazy" src="assets/img/home-1/hero/hammer (1light).png" alt="overlay" class="glow-loop overlay-img img-fluid" style="max-width: 100%; height: auto;">
+          <img loading="lazy" src="assets/img/home-1/hero/hammer (1light).avif" alt="overlay" class="glow-loop overlay-img img-fluid" style="max-width: 100%; height: auto;">
         </div>
       </div>
 
@@ -529,7 +529,7 @@
         Entity
     </h2>
     <div class="left-shape">
-        <img src="assets/img/home-1/about/shape-1.png" alt="img">
+        <img src="assets/img/home-1/about/shape-1.avif" alt="img">
     </div>
     <div class="container">
         <div class="gt-about-wrapper">
@@ -617,13 +617,13 @@
                     <div class="swiper-slide brand-slide-element">
                         <div class="marquee-text-3">
                             <span class="text-marquee">The Entity Studios</span>
-                            <span><img src="assets/img/home-1/circle.png" alt="img"></span>
+                            <span><img src="assets/img/home-1/circle.avif" alt="img"></span>
                         </div>
                     </div>
                     <div class="swiper-slide brand-slide-element">
                         <div class="marquee-text-3">
                             <span class="text-marquee">The Entity Studios</span>
-                            <span><img src="assets/img/home-1/circle.png" alt="img"></span>
+                            <span><img src="assets/img/home-1/circle.avif" alt="img"></span>
                         </div>
                     </div>
                     
@@ -636,13 +636,13 @@
                         <div class="swiper-slide brand-slide-element">
                             <div class="marquee-text-3">
                                 <span class="text-marquee">AAA VETERANS</span>
-                                <span><img src="assets/img/home-1/circle.png" alt="img"></span>
+                                <span><img src="assets/img/home-1/circle.avif" alt="img"></span>
                             </div>
                         </div>
                         <div class="swiper-slide brand-slide-element">
                             <div class="marquee-text-3">
                                 <span class="text-marquee">ELITE GAME ANIMATION</span>
-                                <span><img src="assets/img/home-1/circle.png" alt="img"></span>
+                                <span><img src="assets/img/home-1/circle.avif" alt="img"></span>
                             </div>
                         </div>
                     </div>
@@ -816,7 +816,7 @@
 
     <!-- Decorative Shape -->
     <div class="left-shape position-absolute bottom-0 start-0 z-n1 d-none d-md-block">
-        <img src="assets/img/home-1/about/shape-1.png" alt="img">
+        <img src="assets/img/home-1/about/shape-1.avif" alt="img">
     </div>
 
     <!-- Content Container -->
@@ -935,7 +935,7 @@
                                                                             <div class="col-md-6">
                                                                                 <div class="service-card gt-about-box-wrapper top_view_2 item-hover">
                                                                                     <div class="service py-3">
-                                                                                        <img src="assets/img/home-1/icon/icon-6.png" alt="img">
+                                                                                        <img src="assets/img/home-1/icon/icon-6.avif" alt="img">
                                                                                     </div>
                                                                                     <h3 class="service-title">Integrated Delivery Partner</h3>
                                                                                     <p class="service-description">
@@ -947,7 +947,7 @@
                                                                             <div class="col-md-6">
                                                                                 <div class="service-card gt-about-box-wrapper top_view_2 item-hover">
                                                                                     <div class="service py-3">
-                                                                                        <img src="assets/img/home-1/icon/icon-7.png" alt="img">
+                                                                                        <img src="assets/img/home-1/icon/icon-7.avif" alt="img">
                                                                                     </div>
                                                                                     <h3 class="service-title">Scalable & Remote Friendly</h3>
                                                                                     <p class="service-description">
@@ -959,7 +959,7 @@
                                                                             <div class="col-md-6">
                                                                                 <div class="service-card gt-about-box-wrapper top_view_2 item-hover">
                                                                                     <div class="service py-3">
-                                                                                        <img src="assets/img/home-1/icon/icon-8.png" alt="img">
+                                                                                        <img src="assets/img/home-1/icon/icon-8.avif" alt="img">
                                                                                     </div>
                                                                                     <h3 class="service-title">Global Operations</h3>
                                                                                     <p class="service-description">
@@ -971,7 +971,7 @@
                                                                             <div class="col-md-6">
                                                                                 <div class="service-card gt-about-box-wrapper top_view_2 item-hover">
                                                                                     <div class="service py-3">
-                                                                                        <img src="assets/img/home-1/icon/icon-9.png" alt="img">
+                                                                                        <img src="assets/img/home-1/icon/icon-9.avif" alt="img">
                                                                                     </div>
                                                                                     <h3 class="service-title">Secured Production</h3>
                                                                                     <p class="service-description">
@@ -1083,12 +1083,12 @@
     </div>
 
     <!-- Left Rotated Image -->
-    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image hide-on-small">
-    <img src="assets/img/hammerlight.png" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
+    <img src="assets/img/hammer.avif" alt="Left Image" class="side-image left-image hide-on-small">
+    <img src="assets/img/hammerlight.avif" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
 
     <!-- Right Image -->
-    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image hide-on-small">
-    <img src="assets/img/home-1/testimonial/shapel.png" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
+    <img src="assets/img/home-1/testimonial/shape.avif" alt="Right Image" class="side-image right-image hide-on-small">
+    <img src="assets/img/home-1/testimonial/shapel.avif" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
 
   </div>
 </section>
@@ -1505,22 +1505,22 @@ document.getElementById("contact-form").addEventListener("submit", function (e) 
         <div class="logo-carousel-wrapper">
             <div class="logo-track" id="logoTrack2">
           <!-- Initial Logos -->
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).png" alt="Logo 1"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).png" alt="Logo 2"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).png" alt="Logo 3"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (4).png" alt="Logo 4"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (5).png" alt="Logo 5"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (6).png" alt="Logo 6"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (7).png" alt="Logo 7"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (8).png" alt="Logo 8"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (9).png" alt="Logo 9"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).png" alt="Logo 10"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).png" alt="Logo 11"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).png" alt="Logo 12"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).png" alt="Logo 13"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).png" alt="Logo 14"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).png" alt="Logo 15"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).png" alt="Logo 16"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).avif" alt="Logo 1"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).avif" alt="Logo 2"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).avif" alt="Logo 3"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (4).avif" alt="Logo 4"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (5).avif" alt="Logo 5"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (6).avif" alt="Logo 6"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (7).avif" alt="Logo 7"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (8).avif" alt="Logo 8"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (9).avif" alt="Logo 9"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).avif" alt="Logo 10"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).avif" alt="Logo 11"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).avif" alt="Logo 12"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).avif" alt="Logo 13"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).avif" alt="Logo 14"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).avif" alt="Logo 15"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).avif" alt="Logo 16"></div>
 
 
             </div>
@@ -1533,7 +1533,7 @@ document.getElementById("contact-form").addEventListener("submit", function (e) 
 <div class="col-lg-8 col-md-8">
     <div class="d-flex justify-content-center justify-content-md-start align-items-center mb-3">
         <a href="home.html" class="header-logo">
-            <img loading="lazy" src="assets/img/logo/black-logo.png" alt="logo-img">
+            <img loading="lazy" src="assets/img/logo/black-logo.avif" alt="logo-img">
         </a>
     </div>
     <p class="footer-description py-3">
