--- a/services.html
+++ b/services.html
@@ -224,7 +224,7 @@
                 <div class="header-left">
                     <div class="logo initial-large">
                         <a href="home.html" class="header-logo">
-                            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+                            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
                         </a>
                     </div>
                     <div class="mean__menu-wrapper">
@@ -371,7 +371,7 @@
   <div id="smooth-content">
     <div class="hero-section hero-1 responsive-hero">
       <video autoplay muted loop playsinline aria-hidden="true">
-        <source src="assets/img/home-1/hero/Logo_AIc.mp4" type="video/mp4">
+        <source src="assets/img/home-1/hero/Logo_AIc.webm" type="video/mp4">
         <!-- No need for fallback inside <video> tag; background image already handles it -->
       </video>
     </div>
@@ -542,7 +542,7 @@
 
     <!-- Decorative Shape -->
     <div class="left-shape position-absolute bottom-0 start-0 z-n1 d-none d-md-block">
-        <img src="assets/img/home-1/about/shape-1.png" alt="img">
+        <img src="assets/img/home-1/about/shape-1.avif" alt="img">
     </div>
 
     <!-- Content Container -->
@@ -753,7 +753,7 @@
 
       <!-- Lottie animation container (top) -->
       <!-- <div id="lottie-top-animation" class="position-absolute"></div> -->
-<img id="bg-image-replacement2" src="assets/img/home-3/bgred.png" alt="redbg">
+<img id="bg-image-replacement2" src="assets/img/home-3/bgred.avif" alt="redbg">
 
     
  <!-- Overlay paragraph -->
@@ -936,7 +936,7 @@
 
   <!-- Duplicate Lottie animation at the top -->
   <!-- <div id="lottie-top-animation-duplicate"></div> -->
-<img id="bg-image-replacement" class="hide-mobile" src="assets/img/home-3/bgred.png" alt="redbg">
+<img id="bg-image-replacement" class="hide-mobile" src="assets/img/home-3/bgred.avif" alt="redbg">
 
   <!-- ✅ Overlay paragraph -->
   <p class="hide-mobile overlay-text2 tz-itm-title tz-itm-anim">From raw capture data to polished performance, our mocap solutions deliver clean, <br> expressive animation, ready for seamless integration across gameplay, cinematics, and virtual production.</p>
@@ -1181,12 +1181,12 @@
     </div>
 
     <!-- Left Rotated Image -->
-    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image hide-on-small">
-    <img src="assets/img/hammerlight.png" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
+    <img src="assets/img/hammer.avif" alt="Left Image" class="side-image left-image hide-on-small">
+    <img src="assets/img/hammerlight.avif" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
 
     <!-- Right Image -->
-    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image hide-on-small">
-    <img src="assets/img/home-1/testimonial/shapel.png" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
+    <img src="assets/img/home-1/testimonial/shape.avif" alt="Right Image" class="side-image right-image hide-on-small">
+    <img src="assets/img/home-1/testimonial/shapel.avif" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
 
   </div>
 </section>
@@ -1325,22 +1325,22 @@
         <div class="logo-carousel-wrapper">
             <div class="logo-track" id="logoTrack2">
           <!-- Initial Logos -->
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).png" alt="Logo 1"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).png" alt="Logo 2"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).png" alt="Logo 3"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (4).png" alt="Logo 4"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (5).png" alt="Logo 5"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (6).png" alt="Logo 6"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (7).png" alt="Logo 7"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (8).png" alt="Logo 8"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (9).png" alt="Logo 9"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).png" alt="Logo 10"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).png" alt="Logo 11"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).png" alt="Logo 12"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).png" alt="Logo 13"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).png" alt="Logo 14"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).png" alt="Logo 15"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).png" alt="Logo 16"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).avif" alt="Logo 1"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).avif" alt="Logo 2"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).avif" alt="Logo 3"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (4).avif" alt="Logo 4"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (5).avif" alt="Logo 5"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (6).avif" alt="Logo 6"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (7).avif" alt="Logo 7"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (8).avif" alt="Logo 8"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (9).avif" alt="Logo 9"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).avif" alt="Logo 10"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).avif" alt="Logo 11"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).avif" alt="Logo 12"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).avif" alt="Logo 13"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).avif" alt="Logo 14"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).avif" alt="Logo 15"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).avif" alt="Logo 16"></div>
 
 
             </div>
@@ -1353,7 +1353,7 @@
 <div class="col-lg-8 col-md-8">
     <div class="d-flex justify-content-center justify-content-md-start align-items-center mb-3">
         <a href="home.html" class="header-logo">
-            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
         </a>
     </div>
     <p class="footer-description py-3">
