--- a/404.html
+++ b/404.html
@@ -399,7 +399,7 @@
                 <div class="header-left">
                     <div class="logo initial-large">
                         <a href="home.html" class="header-logo">
-                            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+                            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
                         </a>
                     </div>
                     <div class="mean__menu-wrapper">
@@ -462,13 +462,13 @@
                 <!-- GT Breadcrunb Section Start -->
         <div class="gt-breadcrumb-wrapper bg-cover" style="background-image: url('assets/img/breadcrumb.avif');">
             <div class="gt-left-shape">
-                <img src="assets/img/shape-1.png" alt="img">
+                <img src="assets/img/shape-1.avif" alt="img">
             </div>
             <div class="gt-right-shape">
-                <img src="assets/img/shape-2.png" alt="img">
+                <img src="assets/img/shape-2.avif" alt="img">
             </div>
             <div class="gt-blur-shape">
-                <img src="assets/img/breadcrumb-shape.png" alt="img">
+                <img src="assets/img/breadcrumb-shape.avif" alt="img">
             </div>
             <div class="container">
                 <div class="gt-page-heading">
@@ -499,7 +499,7 @@
                     <div class="col-lg-6">
                         <div class="gt-error-items">
                             <div class="gt-error-image wow fadeInUp" data-wow-delay=".3s">
-                                <img src="assets/img/inner-page/404.png" alt="img">
+                                <img src="assets/img/inner-page/404.avif" alt="img">
                             </div>
                             <h2 class="wow fadeInUp" data-wow-delay=".5s">
                                 error - page not found
@@ -765,7 +765,7 @@
 <div class="col-lg-8 col-md-8">
     <div class="d-flex justify-content-center justify-content-md-start align-items-center mb-3">
         <a href="home.html" class="header-logo">
-            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
         </a>
     </div>
     <p class="footer-description py-3">
