--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -345,7 +345,7 @@
                 <div class="header-left">
                     <div class="logo initial-large">
                         <a href="home.html" class="header-logo">
-                            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+                            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
                         </a>
                     </div>
                     <div class="mean__menu-wrapper">
@@ -1136,7 +1136,7 @@
 <div class="col-lg-8 col-md-8">
     <div class="d-flex justify-content-center justify-content-md-start align-items-center mb-3">
         <a href="home.html" class="header-logo">
-            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
         </a>
     </div>
     <p class="footer-description py-3">
