--- a/projects.html
+++ b/projects.html
@@ -348,7 +348,7 @@
                 <div class="header-left">
                     <div class="logo initial-large">
                         <a href="home.html" class="header-logo">
-                            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+                            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
                         </a>
                     </div>
                     <div class="mean__menu-wrapper">
@@ -543,7 +543,7 @@
   <div id="smooth-content">
     <div class="hero-section hero-1 responsive-hero">
       <video autoplay muted loop playsinline aria-hidden="true">
-        <source src="assets/img/home-1/hero/Logo_AId.mp4" type="video/mp4">
+        <source src="assets/img/home-1/hero/Logo_AId.webm" type="video/mp4">
         <!-- No need for fallback inside <video> tag; background image already handles it -->
       </video>
     </div>
@@ -967,11 +967,11 @@
     </div>
 
     <!-- Left Rotated Image -->
-    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image hide-on-small">
-    <img src="assets/img/hammerlight.png" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
+    <img src="assets/img/hammer.avif" alt="Left Image" class="side-image left-image hide-on-small">
+    <img src="assets/img/hammerlight.avif" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
     <!-- Right Image -->
-    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image hide-on-small">
-    <img src="assets/img/home-1/testimonial/shapel.png" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
+    <img src="assets/img/home-1/testimonial/shape.avif" alt="Right Image" class="side-image right-image hide-on-small">
+    <img src="assets/img/home-1/testimonial/shapel.avif" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
   </div>
 </section>
 
@@ -1384,22 +1384,22 @@
         <div class="logo-carousel-wrapper">
             <div class="logo-track" id="logoTrack2">
           <!-- Initial Logos -->
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).png" alt="Logo 1"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).png" alt="Logo 2"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).png" alt="Logo 3"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (4).png" alt="Logo 4"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (5).png" alt="Logo 5"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (6).png" alt="Logo 6"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (7).png" alt="Logo 7"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (8).png" alt="Logo 8"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (9).png" alt="Logo 9"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).png" alt="Logo 10"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).png" alt="Logo 11"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).png" alt="Logo 12"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).png" alt="Logo 13"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).png" alt="Logo 14"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).png" alt="Logo 15"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).png" alt="Logo 16"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).avif" alt="Logo 1"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).avif" alt="Logo 2"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).avif" alt="Logo 3"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (4).avif" alt="Logo 4"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (5).avif" alt="Logo 5"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (6).avif" alt="Logo 6"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (7).avif" alt="Logo 7"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (8).avif" alt="Logo 8"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (9).avif" alt="Logo 9"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).avif" alt="Logo 10"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).avif" alt="Logo 11"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).avif" alt="Logo 12"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).avif" alt="Logo 13"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).avif" alt="Logo 14"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).avif" alt="Logo 15"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).avif" alt="Logo 16"></div>
 
 
             </div>
@@ -1412,7 +1412,7 @@
 <div class="col-lg-8 col-md-8">
     <div class="d-flex justify-content-center justify-content-md-start align-items-center mb-3">
         <a href="home.html" class="header-logo">
-            <img src="assets/img/logo/black-logo.png" alt="logo-img">
+            <img src="assets/img/logo/black-logo.avif" alt="logo-img">
         </a>
     </div>
     <p class="footer-description py-3">
