--- a/Testing.html
+++ b/Testing.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>3D Image Carousel</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Swiper CSS -->
-           <link rel="stylesheet" href="assets/css/services.css">  
+  <link rel="stylesheet" href="assets/css/services.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <style>
@@ -31,7 +32,7 @@
       align-items: center;
       border-radius: 15px;
       overflow: hidden;
-      box-shadow: 0 15px 30px rgba(0,0,0,0.4);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
       transform: scale(0.85);
       transition: transform 0.4s ease;
     }
@@ -65,144 +66,151 @@
     }
   </style>
 </head>
+
 <body>
 
-<!-- GT Team Section Modified Start - Desktop -->
-<section class="gt-service-section section-padding fix d-flex align-items-center justify-content-center">
-  
+  <!-- GT Team Section Modified Start - Desktop -->
+  <section class="gt-service-section section-padding fix d-flex align-items-center justify-content-center">
 
 
-  <!-- Main container -->
-  <div class="container hide-mobile" style="max-width: 1200px; min-height: auto;">
-    <div class="gt-team-wrapper position-relative">
 
-      <!-- Lottie animation container (top) -->
-      <!-- <div id="lottie-top-animation" class="position-absolute"></div> -->
-<img id="bg-image-replacement2" src="assets/img/home-3/bgred.avif" alt="redbg">
+    <!-- Main container -->
+    <div class="container hide-mobile" style="max-width: 1200px; min-height: auto;">
+      <div class="gt-team-wrapper position-relative">
 
-    
- <!-- Overlay paragraph -->
-  <h5 class="overlay-text text-center mb-5 tz-itm-title tz-itm-anim">From keyframe to engine-ready, our animations are crafted for expressive performance and seamless <br> real-time integration, powering everything from gameplay to cinematics.</h5>
-
-      <!-- Swiper slider for services -->
-      <div id="services"  class="swiper gt-service-slider">
-
-        <!-- Vertical text label -->
-        <div class="vertical-text2">Animation</div>
+        <!-- Lottie animation container (top) -->
+        <!-- <div id="lottie-top-animation" class="position-absolute"></div> -->
+        <img id="bg-image-replacement2" src="assets/img/home-3/bgred.avif" alt="redbg">
 
 
-<!-- Swiper Section Container -->
-<div class="container" style="max-width: 1200px; margin: auto;">
-  <div class="swiper mySwiper">
-    <div class="swiper-wrapper">
+        <!-- Overlay paragraph -->
+        <h5 class="overlay-text text-center mb-5 tz-itm-title tz-itm-anim">From keyframe to engine-ready, our animations
+          are crafted for expressive performance and seamless <br> real-time integration, powering everything from
+          gameplay to cinematics.</h5>
 
-      <!-- Slide 1 -->
-      <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard7.jpg');">
-          <div class="overlay"></div>
-          <div class="accordion-title-mob">🛠️ Rigging & <span>Character setup</span></div>
-          <div class="accordion-body-mob">
-            <ul>
-              <li>Custom skeleton creation tailored for game-ready characters.</li>
-              <li>Advanced deformation setup for natural and dynamic movement.</li>
-              <li>Facial rigging for expressive performances.</li>
-              <li>Modular rigs optimized for animation pipelines.</li>
-              <li>Physics-based rigging for cloth, hair, and props.</li>
-            </ul>
+        <!-- Swiper slider for services -->
+        <div id="services" class="swiper gt-service-slider">
+
+          <!-- Vertical text label -->
+          <div class="vertical-text2">Animation</div>
+
+
+          <!-- Swiper Section Container -->
+          <div class="container" style="max-width: 1200px; margin: auto;">
+            <div class="swiper mySwiper">
+              <div class="swiper-wrapper">
+
+                <!-- Slide 1 -->
+                <div class="swiper-slide">
+                  <div class="accordion-card-mob"
+                    style="background-image: url('assets/img/home-3/services/TestCard7.jpg');">
+                    <div class="overlay"></div>
+                    <div class="accordion-title-mob">🛠️ Rigging & <span>Character setup</span></div>
+                    <div class="accordion-body-mob">
+                      <ul>
+                        <li>Custom skeleton creation tailored for game-ready characters.</li>
+                        <li>Advanced deformation setup for natural and dynamic movement.</li>
+                        <li>Facial rigging for expressive performances.</li>
+                        <li>Modular rigs optimized for animation pipelines.</li>
+                        <li>Physics-based rigging for cloth, hair, and props.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Slide 2 -->
+                <div class="swiper-slide">
+                  <div class="accordion-card-mob"
+                    style="background-image: url('assets/img/home-3/services/TestCard3.jpg');">
+                    <div class="overlay"></div>
+                    <div class="accordion-title-mob">⚙️ Technical <span>integration</span></div>
+                    <div class="accordion-body-mob">
+                      <ul>
+                        <li>Animation implementation and state machine setup.</li>
+                        <li>IK/FK blending and procedural animation workflows.</li>
+                        <li>Retargeting and optimizing animation for game engines.</li>
+                        <li>Blueprint and animation graph setup for seamless interactions.</li>
+                        <li>Root motion and physics-based movement integration.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Slide 3 -->
+                <div class="swiper-slide">
+                  <div class="accordion-card-mob"
+                    style="background-image: url('assets/img/home-3/services/TestCard5.jpg');">
+                    <div class="overlay"></div>
+                    <div class="accordion-title-mob">🎬 Cinematic & <span>Gameplay animation</span></div>
+                    <div class="accordion-body-mob">
+                      <ul>
+                        <li>High‑quality keyframe and mocap‑driven animations.</li>
+                        <li>Stylized and realistic animation styles tailored for your game.</li>
+                        <li>Cinematic sequences for trailers, cutscenes, and storytelling.</li>
+                        <li>Combat, locomotion, and interaction animations for immersive gameplay.</li>
+                        <li>Polishing and refining animations for final implementation.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <!-- Navigation Arrows -->
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+
+              <!-- Pagination Dots -->
+              <div class="swiper-pagination"></div>
+            </div>
           </div>
-        </div>
-      </div>
-
-      <!-- Slide 2 -->
-      <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard3.jpg');">
-          <div class="overlay"></div>
-          <div class="accordion-title-mob">⚙️ Technical <span>integration</span></div>
-          <div class="accordion-body-mob">
-            <ul>
-              <li>Animation implementation and state machine setup.</li>
-              <li>IK/FK blending and procedural animation workflows.</li>
-              <li>Retargeting and optimizing animation for game engines.</li>
-              <li>Blueprint and animation graph setup for seamless interactions.</li>
-              <li>Root motion and physics-based movement integration.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <!-- Slide 3 -->
-      <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard5.jpg');">
-          <div class="overlay"></div>
-          <div class="accordion-title-mob">🎬 Cinematic & <span>Gameplay animation</span></div>
-          <div class="accordion-body-mob">
-            <ul>
-              <li>High‑quality keyframe and mocap‑driven animations.</li>
-              <li>Stylized and realistic animation styles tailored for your game.</li>
-              <li>Cinematic sequences for trailers, cutscenes, and storytelling.</li>
-              <li>Combat, locomotion, and interaction animations for immersive gameplay.</li>
-              <li>Polishing and refining animations for final implementation.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <!-- Navigation Arrows -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-
-    <!-- Pagination Dots -->
-    <div class="swiper-pagination"></div>
-  </div>
-</div>
 
 
 
 
-      </div> <!-- End swiper -->
+        </div> <!-- End swiper -->
 
 
-    </div> <!-- End gt-team-wrapper -->
-  </div> <!-- End container -->
-  
+      </div> <!-- End gt-team-wrapper -->
+    </div> <!-- End container -->
 
-</section>
 
-<!-- Bootstrap JS (Optional for modal, etc.) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Swiper JS -->
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  </section>
 
-<script>
-  const swiper = new Swiper(".mySwiper", {
-    effect: "coverflow",
-    grabCursor: true,
-    centeredSlides: true,
-    slidesPerView: "auto",
-    loop: true,
-    coverflowEffect: {
-      rotate: 50,
-      stretch: 0,
-      depth: 150,
-      modifier: 1,
-      slideShadows: false,
-    },
-    autoplay: {
-      delay: 3000,
-      disableOnInteraction: false,
-    },
-    pagination: {
-      el: ".swiper-pagination",
-      clickable: true
-    },
-    navigation: {
-      nextEl: ".swiper-button-next",
-      prevEl: ".swiper-button-prev"
-    },
-  });
-</script>
+  <!-- Bootstrap JS (Optional for modal, etc.) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+  <script>
+    const swiper = new Swiper(".mySwiper", {
+      effect: "coverflow",
+      grabCursor: true,
+      centeredSlides: true,
+      slidesPerView: "auto",
+      loop: true,
+      coverflowEffect: {
+        rotate: 50,
+        stretch: 0,
+        depth: 150,
+        modifier: 1,
+        slideShadows: false,
+      },
+      autoplay: {
+        delay: 3000,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev"
+      },
+    });
+  </script>
 
 </body>
+
 </html>
